# V1000

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/v1000-app/: Cargo.toml
crates/v1000-app/src/: main.rs
crates/v1000-audio/: Cargo.toml
crates/v1000-audio/src/: lib.rs
crates/v1000-codec/: Cargo.toml
crates/v1000-codec/examples/: decode_probe.rs
crates/v1000-codec/src/: decoder.rs  lib.rs  producer.rs  source.rs
crates/v1000-core/: Cargo.toml
crates/v1000-core/src/: cache.rs  frame.rs  lib.rs  pool.rs  time.rs
crates/v1000-effects/: Cargo.toml
crates/v1000-effects/src/: lib.rs
crates/v1000-export/: Cargo.toml
crates/v1000-export/src/: lib.rs
crates/v1000-gui/: Cargo.toml
crates/v1000-gui/src/: lib.rs
crates/v1000-render/: Cargo.toml
crates/v1000-render/src/: lib.rs  preview.rs
crates/v1000-timeline/: Cargo.toml
crates/v1000-timeline/examples/: sequence_probe.rs
crates/v1000-timeline/src/: clip.rs  lib.rs  sequence.rs  track.rs
docs/decisions/: 0001-single-gpu-abstraction.md  0002-single-gui-toolkit.md  0003-portability-constraints.md  0004-codec-and-licensing.md  0005-canonical-time-model.md
