[package]
name = "v1000-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "V1000 editor binary."

[[bin]]
name = "v1000"
path = "src/main.rs"

[features]
default = []
# Enables real file decoding (FFmpeg) + the open-file dialog in the GUI.
ffmpeg = ["v1000-gui/ffmpeg"]

[dependencies]
v1000-gui.workspace = true
anyhow.workspace = true
