[package]
name = "v1000-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media I/O and decode/encode abstraction (FFmpeg-backed)."

[features]
default = []
# Real file decoding via FFmpeg. Requires system FFmpeg + pkg-config at build
# time. Uses `ffmpeg-the-third` (a maintained `ffmpeg-next` fork) because it
# tracks current FFmpeg (8.1); see ADR-0004.
ffmpeg = ["dep:ffmpeg-the-third"]

[dependencies]
v1000-core.workspace = true
thiserror.workspace = true
ffmpeg-the-third = { version = "5.0", optional = true }
