[package]
name = "v1000-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Editor application shell and widgets (egui/eframe)."

[features]
default = []
# Enables real file decoding (FFmpeg) and the native open-file dialog.
ffmpeg = ["v1000-codec/ffmpeg", "dep:rfd"]

[dependencies]
eframe.workspace = true
v1000-core.workspace = true
v1000-codec.workspace = true
v1000-render.workspace = true
v1000-timeline.workspace = true
rfd = { version = "0.14", optional = true }
